@@ -2,6 +2,8 @@
 
 ## Version 0.6.1
 - IMPROVE: FromListSimple now accepts subclasses of lists (#79)
+- IMPROVE: FromDataFrameTable now supports tibbles (#89)
+- IMPROVE: print.Node and as.data.frame.Node now also work for node fields with length > 1 (#81)
 
 ## Version 0.6.0
 - REMOVE: node$FindNode, and node$Navigate are now deprecated. Use FindNode(node, ...) and Naviate(node, ...) instead
